Trips Card Grid Issue Fixed, Wraps, Landing CSS Naming Updated

--- a/ghi/src/Home/LandingPage.css
+++ b/ghi/src/Home/LandingPage.css
@@ -119,16 +119,17 @@ video {
 }
 
 /* Dev Cards */
-.card-container {
+.landing-card-container {
   display: flex;
   flex-direction: column;
   justify-items: center;
   align-items: center;
   background: #fff;
   border: none;
+  margin-top: 15px;
 }
 
-.card {
+.landing-page-cards {
   margin: 5px;
   padding: 0px;
   display: grid;
@@ -137,7 +138,7 @@ video {
   align-items: center;
 }
 
-.card > article {
+.landing-page-cards > article {
   background: #fff;
   border: none;
   border-radius: 20px;
@@ -147,12 +148,12 @@ video {
   transition: transform 0.3s;
 }
 
-.card > article:hover {
+.landing-page-cards > article:hover {
   transform: translateY(5px);
   box-shadow: 2px 2px 25px 0px rgba(0, 0, 0, 0.3);
 }
 
-.card > article img {
+.landing-page-cards > article img {
   width: 100%;
   height: 300px;
   border-top-left-radius: 20px;
